footer spacing correction

--- a/style.css
+++ b/style.css
@@ -18,6 +18,71 @@ img{
     margin-left: 10px;
 }
 
+/***** FOOTER   *****/
+
+#footer{
+  padding: 10% 0 10%;
+  background-color: darkgray;
+}
+#footer h2{
+  padding-bottom: 10px;
+}
+.social-links{
+  padding: 10px;
+  color: #000;
+}
+#footer-links{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 100%
+  
+}
+.info{
+display: flex;
+flex-direction: column;
+align-content: center;
+padding: 0px 50px ;
+}
+
+
+/***** FOOTER STRIP *****/
+
+ul{
+  padding-top: 15px;
+  padding-left: 0;
+}
+li{
+  list-style: none;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.footer{
+  display: flex;
+  flex-direction: row;
+  
+}
+
+#footer-strip{
+  display: flex;
+  justify-content: space-between;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+#footer-strip a{
+  padding-right: 15px;
+  color: black;
+}
+@media only screen and (max-width: 767px){
+  #footer-links{
+      padding-top: 30px;
+      justify-content: center;
+  }
+}
+
 
 
 /***** HEADER *****/
@@ -119,73 +184,6 @@ img{
 #newsletter h2 {
   margin-right: 20px;
 }
-
-/***** FOOTER   *****/
-
-#footer{
-    padding: 10% 0 10%;
-    background-color: darkgray;
-}
-#footer h2{
-    padding-bottom: 10px;
-}
-.social-links{
-    padding: 10px;
-    color: #000;
-}
-#footer-links{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding-left: 15px;
-    padding-right: 15px;
-    width: 100%
-    
-}
-.info{
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  padding: 50px;
-}
-
-
-/***** FOOTER STRIP *****/
-
-ul{
-    padding-top: 15px;
-    padding-left: 0;
-}
-li{
-    list-style: none;
-    font-size: 18px;
-    margin-bottom: 10px;
-}
-
-.footer{
-    display: flex;
-    flex-direction: row;
-    
-}
-
-#footer-strip{
-    display: flex;
-    justify-content: space-between;
-    padding-left: 50px;
-    padding-right: 50px;
-}
-#footer-strip a{
-    padding-right: 15px;
-    color: black;
-}
-@media only screen and (max-width: 767px){
-    #footer-links{
-        padding-top: 30px;
-        justify-content: center;
-    }
-}
-
-
 
 
 /*************** ABOUT PAGE ***************/
